--- a/resources/sass/layout/header.scss
+++ b/resources/sass/layout/header.scss
@@ -50,6 +50,7 @@
         color: $white;
         font-size: 1.3em;
         padding: 0 15px;
+        padding-bottom: 154px;
       }
     }
   }
@@ -59,12 +60,15 @@
   position: absolute;
   background: $darkerAqua;
   width: 200px;
-  opacity: 0;
+  //display:none;
+  opacity:0;
   transition: opacity 1s linear;
   top: 55px;
+
 }
 
-.mainMenu li a:hover + .dropdownMenu{
+.mainMenu li:hover > .dropdownMenu{
+ //display:block;
   opacity:1;
 }
 
