--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -27,6 +27,8 @@
 @import 'components/basic/button';
 @import 'components/basic/selectbox';
 @import 'components/basic/textbox';
+@import 'components/basic/helplink';
+@import 'components/basic/lightbox';
 
 
 
