--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -25,6 +25,7 @@ $darkerWhite:#f5f5f5;
 $darkestWhite: #ebebeb;
 $aqua:#00cecd;
 $darkerAqua: #00b5b4;
+$lightgrey: #ebebeb;
 $lighestGrey:#1b1b1b;
 $darkerGrey:#1c1c1c;
 $black: #000000;
