--- a/resources/sass/pages/homepage.scss
+++ b/resources/sass/pages/homepage.scss
@@ -1,3 +1,13 @@
+.formSelectChild{
+  position:$relative;
+}
 
+.formTextChild{
+  position:$relative;
+  left: 5px;
+}
 
+.adjustHelpLink{
+  left: 47.5% !important;
+}
 
