--- a/resources/sass/components/banner.scss
+++ b/resources/sass/components/banner.scss
@@ -9,8 +9,9 @@
   width:$fullWidth;
   height: 621px;
   background-image:
-          linear-gradient(to bottom, rgba(0, 206, 205, 0.52), rgba(139, 219, 219, 0.73)),
-          url('../images/banner.jpg');
+          //linear-gradient(to bottom, rgba(0, 206, 205, 0.52), rgba(139, 219, 219, 0.73)),
+          //url('../images/banner.jpg');
+        linear-gradient(to bottom, rgba(0, 206, 205, 0.72), rgba(0, 206, 205, 0.93)), url(/images/banner.jpg?fca133449dc5cbcc1c77d20379577457);
   margin:$centerOnPage;
   background-repeat:no-repeat;
   background-size:cover;
