--- a/resources/sass/components/basic/lightbox.scss
+++ b/resources/sass/components/basic/lightbox.scss
@@ -12,3 +12,5 @@
   color: #000;
   padding: 8px;
 }
+
+//.pointer{border:solid 10px transparent;border-right-color:#fff;position:absolute;margin:-85px 0 0 -20px;}
