Began creating searchresults page and re-usable components

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -26,6 +26,7 @@ $darkestWhite: #ebebeb;
 $aqua:#00cecd;
 $darkerAqua: #00b5b4;
 $lightgrey: #ebebeb;
+$lightergrey: #ececec;
 $lighestGrey:#1b1b1b;
 $darkerGrey:#1c1c1c;
 $black: #000000;
