--- a/resources/sass/components/basic/helplink.scss
+++ b/resources/sass/components/basic/helplink.scss
@@ -16,3 +16,24 @@
 .helpLink:hover + .lightbox{
   display:block;
 }
+
+//REPOSITION HELP LINK
+.helpPosition1{
+  left: 90px !important;
+}
+
+.helpPosition2{
+  left: 80px !important;
+}
+
+.helpPosition3{
+  left: 155px !important;
+}
+
+.helpPosition4{
+  left: 120px !important;
+}
+
+.helpPosition5{
+  left: 160px !important;
+}
