--- a/public/css/app.css
+++ b/public/css/app.css
@@ -241,84 +241,94 @@ input {
   padding: 8px 10px;
 }
 
-.bannerParent {
+.filterParent {
   width: 100%;
-  height: auto;
+  background-color: #ffffff;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
-.banner {
-  width: 100%;
-  height: 621px;
-  background-image: linear-gradient(to bottom, rgba(0, 206, 205, 0.72), rgba(0, 206, 205, 0.93)), url(/images/banner.jpg?fca133449dc5cbcc1c77d20379577457);
-  margin: auto;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.bannerData {
-  display: -webkit-flex;
-  display: flex;
+.filter {
   width: 83.3333333333%;
   margin: auto;
-  padding-top: 42px;
-  color: #ffffff;
+  height: 187px;
 }
 
-.homePostCodeParent {
+.postProx,
+.selectProx {
+  display: -webkit-flex;
+  display: flex;
+}
+
+.postProxChild {
   flex: 1 1 0;
   -webkit-flex: 1 1 0;
   -ms-flex: 1 1 100px;
-}
-
-.box {
-  width: 511px;
-  height: 431px;
-  border-radius: 20px;
-  background-color: #ffffff;
-  opacity: 0.75;
-}
-
-.box p {
-  color: #000000;
-  font-size: 1.3em;
-  width: 50%;
-  text-align: center;
-  margin: auto;
-  padding-top: 10px;
-}
-
-.homePromo {
-  flex: 1 1 0;
-  -webkit-flex: 1 1 0;
-  -ms-flex: 1 1 100px;
-  padding-top: 100px;
-}
-
-.homePromo p {
-  font-size: 1.5em;
-  width: 70%;
-}
-
-.promoList li {
-  list-style: none;
-  font-size: 1.4em;
-  line-height: 40px;
-}
-
-.browseButton {
-  text-align: center;
-  font-size: 1.2em;
-}
-
-.browseButton a {
-  color: #1c1c1c;
-}
-
-.aquaChevron {
-  color: #00cecd;
   position: relative;
-  left: -30px;
-  top: 3px;
+}
+
+.searchPageSelect {
+  width: 70%;
+  margin-left: 0 !important;
+}
+
+.inputClass {
+  margin-left: 0 !important;
+}
+
+.blackChevron {
+  color: #000000;
+  left: -24px;
+}
+
+.resultsLabel {
+  padding-bottom: 10px;
+  left: 0 !important;
+}
+
+.sortParent {
+  width: 100%;
+  background-color: #ececec;
+}
+
+.sort {
+  width: 83.3333333333%;
+  margin: auto;
+}
+
+.sortBar {
+  height: 50px;
+  display: -webkit-flex;
+  display: flex;
+}
+
+.showSection,
+.sortSection {
+  flex: 1 1 0;
+  -webkit-flex: 1 1 0;
+  -ms-flex: 1 1 100px;
+  padding-top: 15px;
+  padding-bottom: 7px;
+}
+
+.sortPageSelect,
+.sortBy {
+  width: 200px;
+}
+
+.sortLabel {
+  left: 0 !important;
+  top: -10px !important;
+}
+
+.sortBy {
+  top: -10px !important;
+  position: relative;
+}
+
+.sortCategories {
+  background: linear-gradient(to bottom, rgba(0, 206, 205, 0.72), rgba(0, 206, 205, 0.93));
+  height: 80px;
 }
 
 .whyChooseParent {
@@ -490,6 +500,86 @@ input {
   position: absolute;
   top: 13px;
   left: 55px;
+}
+
+.bannerParent {
+  width: 100%;
+  height: auto;
+}
+
+.banner {
+  width: 100%;
+  height: 621px;
+  background-image: linear-gradient(to bottom, rgba(0, 206, 205, 0.72), rgba(0, 206, 205, 0.93)), url(/images/banner.jpg?fca133449dc5cbcc1c77d20379577457);
+  margin: auto;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.bannerData {
+  display: -webkit-flex;
+  display: flex;
+  width: 83.3333333333%;
+  margin: auto;
+  padding-top: 42px;
+  color: #ffffff;
+}
+
+.homePostCodeParent {
+  flex: 1 1 0;
+  -webkit-flex: 1 1 0;
+  -ms-flex: 1 1 100px;
+}
+
+.box {
+  width: 511px;
+  height: 431px;
+  border-radius: 20px;
+  background-color: #ffffff;
+  opacity: 0.75;
+}
+
+.box p {
+  color: #000000;
+  font-size: 1.3em;
+  width: 50%;
+  text-align: center;
+  margin: auto;
+  padding-top: 10px;
+}
+
+.homePromo {
+  flex: 1 1 0;
+  -webkit-flex: 1 1 0;
+  -ms-flex: 1 1 100px;
+  padding-top: 100px;
+}
+
+.homePromo p {
+  font-size: 1.5em;
+  width: 70%;
+}
+
+.promoList li {
+  list-style: none;
+  font-size: 1.4em;
+  line-height: 40px;
+}
+
+.browseButton {
+  text-align: center;
+  font-size: 1.2em;
+}
+
+.browseButton a {
+  color: #1c1c1c;
+}
+
+.aquaChevron {
+  color: #00cecd;
+  position: relative;
+  left: -30px;
+  top: 3px;
 }
 
 .blogSectionParent {
@@ -677,6 +767,26 @@ input {
   display: block;
 }
 
+.helpPosition1 {
+  left: 90px !important;
+}
+
+.helpPosition2 {
+  left: 80px !important;
+}
+
+.helpPosition3 {
+  left: 155px !important;
+}
+
+.helpPosition4 {
+  left: 120px !important;
+}
+
+.helpPosition5 {
+  left: 160px !important;
+}
+
 .lightbox {
   width: 200px;
   height: 70px;
@@ -690,6 +800,11 @@ input {
   border: 1px dashed orange;
   color: #000;
   padding: 8px;
+}
+
+.rangeParent {
+  display: -webkit-flex;
+  display: flex;
 }
 
 /*!
