--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -33,6 +33,8 @@ $black: #000000;
 $sunnyYellow: #fff568;
 $footerGrey: #363636;
 $sectionBeige: #ececec;
+$darkBlue: #1b71f3;
+$hotpink:  #ed0373;
 
 // Full width
 $fullWidth: 100%;
