--- a/resources/sass/pages/resultspage.scss
+++ b/resources/sass/pages/resultspage.scss
@@ -198,3 +198,29 @@
   }
 }
 
+.enquiry, .compare{
+  border-radius: 7px !important;
+  width: 159px !important;
+  height: 44px !important;
+  font-size: .8em !important;
+  padding: 0 !important;
+
+}
+
+.enquiry{
+  padding-top: 12px !important;
+
+}
+
+.compare{
+  border-radius: 23px !important;
+  border: 2px solid #00cecd;
+  background: rgba(27, 112, 243, 0) !important;
+  color: $aqua !important;
+  padding-top: 7px !important;
+}
+
+.fa-heart{
+  padding-left: 2px;
+}
+
