--- a/resources/sass/components/logo.scss
+++ b/resources/sass/components/logo.scss
@@ -9,10 +9,10 @@
   align-items: center;
   margin-top: 30px;
   .headerLogoImg{
-    width: $fullWidth / 15;
+    width: 8%;
     position:absolute;
-    top:0px;
-    left:0;
+    top:9px;
+    left:-9px;
   }
   .headerLogoTitle{
 
