--- a/public/css/app.css
+++ b/public/css/app.css
@@ -32,7 +32,7 @@
 }
 
 .mainHeader {
-  width: 83.3333333333%;
+  width: 1180px;
   margin: auto;
 }
 
@@ -88,6 +88,7 @@
   opacity: 0;
   transition: opacity 1s linear;
   top: 55px;
+  z-index: 99;
 }
 
 .mainMenu li:hover > .dropdownMenu {
@@ -123,7 +124,7 @@ input {
 }
 
 .footerCreds {
-  width: 83.3333333333%;
+  width: 1180px;
   margin: auto;
 }
 
@@ -168,20 +169,19 @@ input {
   position: relative;
   background-image: url(/images/Layer_7_copy_2.svg?bbe12441f06eac3fccec76af8aff7fa8);
   background-repeat: no-repeat;
-  background-position: center 60%;
   padding-top: 100px;
-  background-size: 100% 20%;
+  background-size: 100% 100%;
 }
 
 .sitemapBottom {
   padding-top: 300px;
-  width: 83.3333333333%;
+  width: 1180px;
   margin: auto;
   color: #ffffff;
 }
 
 .sitemap {
-  width: 83.3333333333%;
+  width: 1180px;
   margin: auto;
   display: -webkit-flex;
   display: flex;
@@ -204,7 +204,7 @@ input {
 
 .social {
   color: #ffffff;
-  margin-left: 42%;
+  margin-left: 20%;
 }
 
 .social li {
@@ -249,7 +249,7 @@ input {
 }
 
 .filter {
-  width: 83.3333333333%;
+  width: 1180px;
   margin: auto;
   height: 187px;
 }
@@ -268,8 +268,9 @@ input {
 }
 
 .searchPageSelect {
-  width: 70%;
+  width: 90%;
   margin-left: 0 !important;
+  padding: 0 15px 0 10px;
 }
 
 .inputClass {
@@ -292,7 +293,7 @@ input {
 }
 
 .sort {
-  width: 83.3333333333%;
+  width: 1180px;
   margin: auto;
 }
 
@@ -302,11 +303,20 @@ input {
   display: flex;
 }
 
+.showSection {
+  flex: 0 0 75%;
+  -webkit-flex: 0 0 75%;
+  -ms-flex: 0 0 75%;
+}
+
+.sortSection {
+  flex: 0 0 25%;
+  -webkit-flex: 0 0 25%;
+  -ms-flex: 0 0 25%;
+}
+
 .showSection,
 .sortSection {
-  flex: 1 1 0;
-  -webkit-flex: 1 1 0;
-  -ms-flex: 1 1 100px;
   padding-top: 15px;
   padding-bottom: 7px;
 }
@@ -332,7 +342,7 @@ input {
 
 .sortCategoriesHeader,
 .sortCategories {
-  width: 83.3333333333%;
+  width: 1180px;
   margin: auto;
   display: -webkit-flex;
   display: flex;
@@ -368,7 +378,7 @@ input {
 
 .sortCatMenu li {
   list-style: none;
-  width: 200px;
+  padding-left: 20px;
   flex: 1 1 0;
   -webkit-flex: 1 1 0;
   -ms-flex: 1 1 100px;
@@ -376,7 +386,6 @@ input {
 
 .sortCatMenu li a {
   color: #ffffff;
-  text-align: center;
 }
 
 .sortCategoriesResults {
@@ -396,9 +405,9 @@ input {
   flex: 1 1 0;
   -webkit-flex: 1 1 0;
   -ms-flex: 1 1 100px;
-  width: 200px;
   text-align: center;
   font-weight: 600;
+  padding-left: 20px;
 }
 
 .sortCatItem {
@@ -410,6 +419,7 @@ input {
 .sortItemLocation {
   font-size: 0.9em;
   line-height: 15px;
+  width: 120px;
 }
 
 .findLink {
@@ -486,7 +496,7 @@ input {
 }
 
 .whyChooseContent {
-  width: 83.3333333333%;
+  width: 1180px;
   margin: auto;
   padding-top: 80px;
 }
@@ -513,6 +523,10 @@ input {
   -ms-flex: 1 1 100px;
 }
 
+.chooseVideo {
+  margin-left: 10%;
+}
+
 .pageTitle {
   font-size: 34px;
   font-weight: 600;
@@ -534,7 +548,7 @@ input {
 }
 
 .howSectionParent {
-  width: 83.3333333333%;
+  width: 1180px;
   margin: 100px auto;
 }
 
@@ -574,7 +588,7 @@ input {
 }
 
 .chooseHealthParent {
-  width: 83.3333333333%;
+  width: 1180px;
   margin: 100px auto;
 }
 
@@ -592,7 +606,7 @@ input {
   margin: 80px auto;
   color: #ffffff;
   position: relative;
-  top: 150px;
+  top: 100px;
   font-size: 1.5em;
   font-weight: 500;
 }
@@ -617,10 +631,10 @@ input {
 }
 
 .headerLogoParent .headerLogoImg {
-  width: 6.6666666667%;
+  width: 8%;
   position: absolute;
-  top: 0px;
-  left: 0;
+  top: 9px;
+  left: -9px;
 }
 
 .headerLogoParent .headerLogoTitle {
@@ -667,7 +681,7 @@ input {
 .bannerData {
   display: -webkit-flex;
   display: flex;
-  width: 83.3333333333%;
+  width: 1180px;
   margin: auto;
   padding-top: 42px;
   color: #ffffff;
@@ -700,12 +714,16 @@ input {
   flex: 1 1 0;
   -webkit-flex: 1 1 0;
   -ms-flex: 1 1 100px;
-  padding-top: 100px;
+  padding-top: 80px;
 }
 
 .homePromo p {
   font-size: 1.5em;
-  width: 70%;
+  width: 86%;
+}
+
+.promoList {
+  width: 80%;
 }
 
 .promoList li {
@@ -731,7 +749,7 @@ input {
 }
 
 .blogSectionParent {
-  width: 83.3333333333%;
+  width: 1180px;
   margin: 0 auto 50px auto;
 }
 
