--- a/resources/sass/components/healthchoice.scss
+++ b/resources/sass/components/healthchoice.scss
@@ -1,6 +1,6 @@
 //HEALTH CHOICE SECTION
 .chooseHealthParent{
-  width: $fullWidth / 1.2;
+  width: $pageWrap;
   margin: 100px auto;
 }
 
@@ -18,7 +18,7 @@
   margin: 80px auto;
   color:$white;
   position: relative;
-  top: 150px;
+  top: 100px;
   font-size: 1.5em;
   font-weight: 500;
 }
