--- a/resources/sass/layout/footer.scss
+++ b/resources/sass/layout/footer.scss
@@ -44,8 +44,9 @@
   position:$relative;
   background-image:url('../images/Layer_7_copy_2.svg');
   background-repeat:no-repeat;
+  background-position: center 60%;
   padding-top: 100px;
-  background-size: 100% 100%;
+  background-size: 100% 70%;
 }
 
 .sitemapBottom{
