--- a/resources/sass/components/basic/lightbox.scss
+++ b/resources/sass/components/basic/lightbox.scss
@@ -3,8 +3,7 @@
   height: 70px;
   background: $white;
   position: absolute;
-  top: 20%;
-  left: 55%;
+  top: -70px;
   border-radius: 20px;
   display: none;
   z-index: 9;
