--- a/public/css/app.css
+++ b/public/css/app.css
@@ -962,10 +962,40 @@ input {
   top: -70px;
   border-radius: 20px;
   display: none;
-  z-index: 9;
-  border: 1px dashed orange;
+  z-index: 99;
+  border: 5px solid #000000;
   color: #000;
   padding: 8px;
+}
+
+.lightboxAdjust {
+  left: 120px !important;
+}
+
+.lightbox:after,
+.lightbox:before {
+  top: 100%;
+  left: 50%;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none;
+}
+
+.lightbox:after {
+  border-color: rgba(136, 183, 213, 0);
+  border-top-color: #fff;
+  border-width: 10px;
+  margin-left: -10px;
+}
+
+.lightbox:before {
+  border-color: rgba(255, 255, 255, 0);
+  border-top-color: #000000;
+  border-width: 16px;
+  margin-left: -16px;
 }
 
 .rangeParent {
