--- a/resources/sass/components/banner.scss
+++ b/resources/sass/components/banner.scss
@@ -7,7 +7,7 @@
 
 .banner{
   width:$fullWidth;
-  height: 621px;
+  min-height: 621px;
   background-image:
           //linear-gradient(to bottom, rgba(0, 206, 205, 0.52), rgba(139, 219, 219, 0.73)),
           //url('../images/banner.jpg');
@@ -21,7 +21,7 @@
   @include flex;
   width:$pageWrap;
   margin: auto;
-  padding-top: 42px;
+  padding: 42px 0;
   color: $white; //inherited value
 
 }
@@ -34,7 +34,7 @@
 
 .box{
   width: 511px;
-  height: 431px;
+  min-height: 431px;
   border-radius: 20px;
   background-color: #ffffff;
   opacity: 0.75;
@@ -47,8 +47,6 @@
     padding-top: 10px;
   }
 }
-
-
 
 .homePromo{
   @include uniformAlignment;
@@ -84,7 +82,33 @@
   top: 3px;
 }
 
+.postcode-autocomplete-cont {
+  float: left;
+  width: 100%;
+  overflow: hidden;
+  -webkit-transition: 1s linear;
+  -moz-transition: 1s linear;
+  -ms-transition: 1s linear;
+  -o-transition: 1s linear;
+  transition: 1s linear;
+  -webkit-transition-delay: 0s;
+  -moz-transition-delay: 0s;
+  -ms-transition-delay: 0s;
+  -o-transition-delay: 0s;
+  transition-delay: 0s;
+  .ajax-box {
+    float: left;
+    width: 100%;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: #fff;
+    border: 2px solid #00cecd;
+    margin: 0 0 20px 0;
+    max-height: 222px;
+    overflow: auto;
+  }
 
+}
 
 
 
