- Added more CSS; - Populated the Procedures dropdown with data from backend

--- a/resources/sass/components/banner.scss
+++ b/resources/sass/components/banner.scss
@@ -36,8 +36,8 @@
   width: 511px;
   min-height: 431px;
   border-radius: 20px;
-  background-color: #ffffff;
-  opacity: 0.75;
+  background-color: #ffffffad;
+  padding: 10px;
   p{
     color: $black;
     font-size: 1.3em;
