- Populated the results page with Data/Hospitals

--- a/resources/sass/pages/resultspage.scss
+++ b/resources/sass/pages/resultspage.scss
@@ -98,6 +98,7 @@
   width: $pageWrap;
   margin: $centerOnPage;
   @include flex;
+  margin-bottom: 10px;
 }
 .sortCategoriesHeader{
   height: 80px;
