--- a/resources/sass/pages/homepage.scss
+++ b/resources/sass/pages/homepage.scss
@@ -1,15 +1,8 @@
-.formSelectChild{
+.formChild {
   position:$relative;
+  margin-bottom:20px;
 }
 
-.formTextChild{
-  position:$relative;
-}
-
-.adjustHelpLink{
+.adjustHelpLink {
   left: 47.5% !important;
 }
-
-
-
-
