--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11,12 +11,15 @@
   float: left;
 }
 
-.formSelectChild {
-  position: relative;
+input[type=submit] {
+  padding: 0;
+  border: none;
+  background: none;
 }
 
-.formTextChild {
+.formChild {
   position: relative;
+  margin-bottom: 20px;
 }
 
 .adjustHelpLink {
@@ -270,6 +273,7 @@ input {
   -webkit-flex: 1 1 0;
   -ms-flex: 1 1 100px;
   position: relative;
+  margin-bottom: 20px;
 }
 
 .searchPageSelect {
@@ -704,16 +708,17 @@ input {
   min-height: 431px;
   border-radius: 20px;
   background-color: #ffffffad;
-  padding: 10px;
+  padding: 10px 30px;
+  text-align: center;
 }
 
 .box p {
   color: #000000;
   font-size: 1.3em;
   width: 50%;
-  text-align: center;
   margin: auto;
   padding-top: 10px;
+  margin-bottom: 20px;
 }
 
 .homePromo {
@@ -749,9 +754,9 @@ input {
 
 .aquaChevron {
   color: #00cecd;
-  position: relative;
-  left: -30px;
-  top: 3px;
+  position: absolute;
+  left: 420px;
+  top: 15px;
 }
 
 .postcode-autocomplete-cont {
@@ -760,6 +765,7 @@ input {
   overflow: hidden;
   transition: 1s linear;
   transition-delay: 0s;
+  margin-top: 10px;
 }
 
 .postcode-autocomplete-cont .ajax-box {
@@ -865,6 +871,10 @@ input {
   text-decoration: none;
 }
 
+.submitBtn {
+  background-image: linear-gradient(270deg, #00cecd 0%, #00d7b5 56%, #00df9d 100%) !important;
+}
+
 .selectParent {
   position: relative;
 }
@@ -927,8 +937,6 @@ textarea {
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
-  margin-left: 7% !important;
-  margin-bottom: 20px !important;
 }
 
 input {
