--- a/resources/sass/components/basic/button.scss
+++ b/resources/sass/components/basic/button.scss
@@ -11,8 +11,6 @@
   padding-top: 10px;
 }
 
-
-
 .blueOval{
   background-image: linear-gradient(270deg, #649ef7 0%, #4087f5 56%, #1b70f3 100%);
   padding: 15px 40px;
@@ -48,4 +46,8 @@
   background: linear-gradient(90deg, #00e09d,#00cecd,#00e09d);
   color: $white;
   text-decoration:none;
+}
+
+.submitBtn {
+  background-image: linear-gradient(270deg, #00cecd 0%, #00d7b5 56%, #00df9d 100%) !important;
 }
