--- a/public/css/app.css
+++ b/public/css/app.css
@@ -326,8 +326,7 @@ input {
 
 .showSection,
 .sortSection {
-  padding-top: 15px;
-  padding-bottom: 7px;
+  margin: auto;
 }
 
 .sortPageSelect,
@@ -628,31 +627,27 @@ input {
 
 .headerLogoParent {
   position: relative;
-  top: -25px;
   -webkit-flex-basis: 0;
           flex-basis: 0;
   -webkit-flex-grow: 1;
   flex-grow: 1;
   max-width: 100%;
-  padding-top: 20px;
   -webkit-align-items: center;
           align-items: center;
-  margin-top: 30px;
 }
 
 .headerLogoParent .headerLogoImg {
-  width: 8%;
+  width: 7%;
   position: absolute;
-  top: 9px;
-  left: -9px;
+  top: 20px;
 }
 
 .headerLogoParent .headerLogoTitle {
   position: absolute;
-  top: 35%;
-  left: 7.5%;
+  top: 37%;
+  left: 9.5%;
   color: #ffffff;
-  font-size: 32px;
+  font-size: 20px;
 }
 
 .footerLogoParent {
@@ -765,7 +760,7 @@ input {
   overflow: hidden;
   transition: 1s linear;
   transition-delay: 0s;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 .postcode-autocomplete-cont .ajax-box {
@@ -775,7 +770,6 @@ input {
   border-radius: 10px;
   background-color: #fff;
   border: 2px solid #00cecd;
-  margin: 0 0 20px 0;
   max-height: 222px;
   overflow: auto;
 }
