--- a/resources/sass/pages/resultspage.scss
+++ b/resources/sass/pages/resultspage.scss
@@ -69,9 +69,7 @@
   -ms-flex: 0 0 25%;
 }
 .showSection, .sortSection{
-
-  padding-top: 15px;
-  padding-bottom: 7px;
+  margin: auto;
 }
 
 .sortPageSelect, .sortBy{
