--- a/resources/sass/components/logo.scss
+++ b/resources/sass/components/logo.scss
@@ -1,29 +1,29 @@
 .headerLogoParent{
   position:$relative;
-  top: -25px;
+  //top: -25px;
   flex-basis: 0;
   -webkit-flex-grow: 1;
   flex-grow: 1;
   max-width: 100%;
-  padding-top: 20px;
+  //padding-top: 20px;
   align-items: center;
-  margin-top: 30px;
-  .headerLogoImg{
-    width: 8%;
-    position:absolute;
-    top:9px;
-    left:-9px;
-  }
-  .headerLogoTitle{
+  //margin-top: 30px;
 
+  .headerLogoImg{
+    width: 7%;
+    position: absolute;
+    top: 20px;
+    //left:-9px;
+  }
+
+  .headerLogoTitle{
     position:absolute;
-    top: 35%;
-    left: 7.5%;
-    color:$white;
-    font-size: 32px;
+    top: 37%;
+    left: 9.5%;
+    color: $white;
+    font-size: 20px;
   }
 }
-
 
 .footerLogoParent{
   position:$relative;
