--- a/public/css/app.css
+++ b/public/css/app.css
@@ -26,6 +26,64 @@ input[type=submit] {
   left: 47.5% !important;
 }
 
+.whyChooseParent {
+  width: 100%;
+  height: auto;
+  background: #ececec;
+}
+
+.whyChooseContent {
+  width: 1180px;
+  margin: auto;
+  padding-top: 80px;
+}
+
+.whyChoose {
+  display: -webkit-flex;
+  display: flex;
+  color: #1b1b1b;
+}
+
+.whyChoose .pageTitle {
+  font-size: 40px;
+  font-weight: 600;
+  margin-bottom: 30px;
+}
+
+.whyChoose p {
+  width: 589px;
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: -1px;
+  line-height: 34px;
+}
+
+.chooseText,
+.chooseVideo {
+  flex: 1 1 0;
+  -webkit-flex: 1 1 0;
+  -ms-flex: 1 1 100px;
+}
+
+.chooseVideo {
+  margin-left: 8%;
+}
+
+.icon {
+  margin-bottom: 20px;
+}
+
+.playerButton {
+  background-image: url(/images/player_button.png?180c959869d99b858b10bfb52ee13007);
+  position: relative;
+  top: -240px;
+  z-index: 999999999;
+  height: 100px;
+  background-repeat: no-repeat;
+  left: 200px;
+  width: 100px;
+}
+
 .fa-cross {
   position: absolute;
   top: 4px;
@@ -496,64 +554,6 @@ input {
 
 .fa-heart {
   padding-left: 2px;
-}
-
-.whyChooseParent {
-  width: 100%;
-  height: auto;
-  background: #ececec;
-}
-
-.whyChooseContent {
-  width: 1180px;
-  margin: auto;
-  padding-top: 80px;
-}
-
-.whyChoose {
-  display: -webkit-flex;
-  display: flex;
-}
-
-.whyChoose p {
-  width: 589px;
-  height: 239px;
-  color: #1b1b1b;
-  font-size: 20px;
-  font-weight: 400;
-  letter-spacing: -1px;
-  line-height: 34px;
-}
-
-.chooseText,
-.chooseVideo {
-  flex: 1 1 0;
-  -webkit-flex: 1 1 0;
-  -ms-flex: 1 1 100px;
-}
-
-.chooseVideo {
-  margin-left: 10%;
-}
-
-.pageTitle {
-  font-size: 34px;
-  font-weight: 600;
-}
-
-.icon {
-  margin-bottom: 20px;
-}
-
-.playerButton {
-  background-image: url(/images/player_button.png?180c959869d99b858b10bfb52ee13007);
-  position: relative;
-  top: -240px;
-  z-index: 999999999;
-  height: 100px;
-  background-repeat: no-repeat;
-  left: 200px;
-  width: 100px;
 }
 
 .howSectionParent {
