--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17,13 +17,14 @@ input[type=submit] {
   background: none;
 }
 
+select.big,
+input.big {
+  height: 61px;
+}
+
 .formChild {
   position: relative;
   margin-bottom: 20px;
-}
-
-.adjustHelpLink {
-  left: 47.5% !important;
 }
 
 .whyChooseParent {
@@ -48,6 +49,7 @@ input[type=submit] {
   font-size: 40px;
   font-weight: 600;
   margin-bottom: 30px;
+  letter-spacing: -2px;
 }
 
 .whyChoose p {
@@ -55,7 +57,7 @@ input[type=submit] {
   font-size: 20px;
   font-weight: 400;
   letter-spacing: -1px;
-  line-height: 34px;
+  line-height: 24px;
 }
 
 .chooseText,
@@ -77,7 +79,7 @@ input[type=submit] {
   background-image: url(/images/player_button.png?180c959869d99b858b10bfb52ee13007);
   position: relative;
   top: -240px;
-  z-index: 999999999;
+  z-index: 1000;
   height: 100px;
   background-repeat: no-repeat;
   left: 200px;
@@ -99,14 +101,15 @@ input[type=submit] {
 .mainHeader {
   width: 1180px;
   margin: auto;
+  letter-spacing: -1px;
 }
 
 .mainHeaderWrap {
   height: 75px;
   background: #00cecd;
-  width: 100%;
   margin: auto;
   width: 100%;
+  text-align: center;
 }
 
 .titleParent {
@@ -126,6 +129,7 @@ input[type=submit] {
   -webkit-align-items: center;
           align-items: center;
   margin: 20px;
+  padding-top: 2px;
 }
 
 .mainNav .mainMenu {
@@ -640,6 +644,7 @@ input {
   width: 7%;
   position: absolute;
   top: 20px;
+  left: 0;
 }
 
 .headerLogoParent .headerLogoTitle {
@@ -677,7 +682,7 @@ input {
 .banner {
   width: 100%;
   min-height: 621px;
-  background-image: linear-gradient(to bottom, rgba(0, 206, 205, 0.72), rgba(0, 206, 205, 0.93)), url(/images/banner.jpg?fca133449dc5cbcc1c77d20379577457);
+  background-image: linear-gradient(to bottom, rgba(0, 206, 205, 0.72), rgba(0, 206, 205, 0.93)), url(/images/banner.jpg);
   margin: auto;
   background-repeat: no-repeat;
   background-size: cover;
@@ -703,29 +708,28 @@ input {
   min-height: 431px;
   border-radius: 20px;
   background-color: #ffffffad;
-  padding: 10px 30px;
+  padding: 20px 30px;
   text-align: center;
 }
 
 .box p {
   color: #000000;
-  font-size: 1.3em;
-  width: 50%;
+  font-size: 25px;
+  width: 66%;
   margin: auto;
-  padding-top: 10px;
-  margin-bottom: 20px;
+  font-weight: 500;
+  letter-spacing: -1.25px;
 }
 
 .homePromo {
   flex: 1 1 0;
   -webkit-flex: 1 1 0;
   -ms-flex: 1 1 100px;
-  padding-top: 80px;
+  margin: auto 0;
 }
 
 .homePromo p {
   font-size: 1.5em;
-  width: 86%;
 }
 
 .promoList {
@@ -745,13 +749,17 @@ input {
 
 .browseButton a {
   color: #1c1c1c;
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: -0.7px;
+  line-height: 19px;
 }
 
 .aquaChevron {
   color: #00cecd;
   position: absolute;
   left: 420px;
-  top: 15px;
+  top: 25px;
 }
 
 .postcode-autocomplete-cont {
@@ -888,10 +896,6 @@ input {
   top: 10px;
 }
 
-.adjustPosition1 {
-  top: 15px;
-}
-
 select {
   border: 2px solid #ebebeb;
   /*Removes border*/
@@ -941,8 +945,8 @@ input {
 .helpLink {
   color: #000000;
   position: absolute;
-  top: 10px;
-  left: 210px;
+  top: 20px;
+  left: 250px;
   border-radius: 50%;
   background: #ebebeb;
   width: 20px;
