--- a/resources/sass/components/banner.scss
+++ b/resources/sass/components/banner.scss
@@ -5,19 +5,19 @@
 
 }
 
-.banner{
+.banner {
   width:$fullWidth;
   min-height: 621px;
   background-image:
           //linear-gradient(to bottom, rgba(0, 206, 205, 0.52), rgba(139, 219, 219, 0.73)),
           //url('../images/banner.jpg');
-        linear-gradient(to bottom, rgba(0, 206, 205, 0.72), rgba(0, 206, 205, 0.93)), url(/images/banner.jpg?fca133449dc5cbcc1c77d20379577457);
+        linear-gradient(to bottom, rgba(0, 206, 205, 0.72), rgba(0, 206, 205, 0.93)), url(/images/banner.jpg);
   margin:$centerOnPage;
   background-repeat:no-repeat;
   background-size:cover;
 }
 
-.bannerData{
+.bannerData {
   @include flex;
   width:$pageWrap;
   margin: auto;
@@ -27,8 +27,7 @@
 }
 
 //BANNER CONTENTS
-.homePostCodeParent{
-
+.homePostCodeParent {
   @include uniformAlignment;
 }
 
@@ -37,30 +36,30 @@
   min-height: 431px;
   border-radius: 20px;
   background-color: #ffffffad;
-  padding: 10px 30px;
+  padding: 20px 30px;
   text-align:center;
 
   p {
     color: $black;
-    font-size: 1.3em;
-    width: 50%;
+    font-size: 25px;
+    width: 66%;
     margin: auto;
-    padding-top: 10px;
-    margin-bottom: 20px;
+    font-weight: 500;
+    letter-spacing: -1.25px;
   }
 }
 
-.homePromo{
+.homePromo {
   @include uniformAlignment;
-  padding-top:80px;
+  margin: auto 0;
 
   p{
     font-size: 1.5em;
-    width: 86%;
+    //width: 86%;
   }
 }
 
-.promoList{
+.promoList {
   width:80%;
   li{
     list-style:none;
@@ -69,19 +68,23 @@
   }
 }
 
-.browseButton{
+.browseButton {
   text-align:center;
   font-size: 1.2em;
   a{
     color: $darkerGrey;
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: -0.7px;
+    line-height: 19px;
   }
 
 }
-.aquaChevron{
+.aquaChevron {
   color: $aqua;
   position:$absolute;
   left: 420px;
-  top: 15px;
+  top: 25px;
 }
 
 .postcode-autocomplete-cont {
