--- a/resources/sass/pages/homepage.scss
+++ b/resources/sass/pages/homepage.scss
@@ -3,10 +3,6 @@
   margin-bottom:20px;
 }
 
-.adjustHelpLink {
-  left: 47.5% !important;
-}
-
 //=======================WHY CHOOSE SECTION=======================
 .whyChooseParent{
   width: 100%;
@@ -28,6 +24,7 @@
     font-size: 40px;
     font-weight:600;
     margin-bottom: 30px;
+    letter-spacing: -2px;
   }
 
   p{
@@ -35,7 +32,7 @@
     font-size: 20px;
     font-weight: 400;
     letter-spacing: -1px;
-    line-height: 34px;
+    line-height: 24px;
   }
 }
 
@@ -56,7 +53,7 @@
   background-image:url(../images//player_button.png);
   position: relative;
   top: -240px;
-  z-index: 999999999;
+  z-index: 1000;
   height: 100px;
   background-repeat: no-repeat;
   left: 200px;
