- Removed the Navbar dropdown ( it was broken ) - Added the correct input values for the Dropdowns of Results page

--- a/resources/sass/layout/header.scss
+++ b/resources/sass/layout/header.scss
@@ -51,7 +51,7 @@
         color: $white;
         font-size: 1.3em;
         padding: 0 15px;
-        padding-bottom: 154px;
+        //padding-bottom: 154px;
       }
     }
   }
