--- a/resources/sass/components/basic/button.scss
+++ b/resources/sass/components/basic/button.scss
@@ -25,7 +25,7 @@
   color: $white;
   text-decoration:none;
   background: #1b71f3;
-  background: -webkit-linear-gradient(legacy-direction(90deg), #1b71f3,#1b71f3,#00cecd);
+  //background: -webkit-linear-gradient(legacy-direction(90deg), #1b71f3,#1b71f3,#00cecd);
   background: linear-gradient(90deg, #1b71f3,#1b71f3,#00cecd);
 }
 
@@ -33,8 +33,7 @@
   background-image: linear-gradient(270deg, #00cecd 0%, #00d7b5 56%, #00df9d 100%);
   width: 219px;
   height: 58px;
-  border-radius: 31px;
-  border-radius: 24px;
+  border-radius: 29px;
   letter-spacing: -1.1px;
   line-height: 24px;
   padding: 15px 40px;
@@ -42,7 +41,7 @@
 
 .greenOval:hover, .greenOvalTop:hover {
   background: #00e09d;
-  background: -webkit-linear-gradient(legacy-direction(90deg), #00e09d,#00cecd,#00e09d);
+  //background: -webkit-linear-gradient(legacy-direction(90deg), #00e09d,#00cecd,#00e09d);
   background: linear-gradient(90deg, #00e09d,#00cecd,#00e09d);
   color: $white;
   text-decoration:none;
